fix spacing

--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -191,14 +191,14 @@ BLOG POST PAGE .blog-post-page {
 }
 
 .blog-post-page .markdown > p {
-    margin: 0 !important;
+    margin: 0 0 1.5rem 0 !important;
     padding: 0 !important;
     border: none !important;
     color: var(--text-1) !important;
 }
 
 .blog-post-page .markdown > p + p {
-    margin: 0 !important;
+    margin: 0 0 1.5rem 0 !important;
     padding: 0 !important;
     border: none !important;
 }
@@ -214,7 +214,7 @@ BLOG POST PAGE .blog-post-page {
 }
 
 .blog-post-page .markdown p {
-    margin: 0 !important;
+    margin: 0 0 1.5rem 0 !important;
     padding: 0 !important;
     border: none !important;
 }
